--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <th>Ações</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="table-users">
                   
                 </tbody>
               </table>
