--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputName">Nome</label>
-                  <input type="text" class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name">
+                  <input type="text" class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name" value="Gustavo">
                 </div>
                 <div class="form-group">
                   <label>Gênero</label>
@@ -221,12 +221,12 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputBirth">Nascimento</label>
-                  <input type="date" class="form-control" id="exampleInputBirth" name="birth">
+                  <input type="text" class="form-control" id="exampleInputBirth" name="birth" value="08-03-2001">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputCountry">País</label>
                   <select class="form-control" id="exampleInputCountry" name="country">
-                    <option value="" selected="selected" >Selecione um país</option>
+                    <option value="" >Selecione um país</option>
                     <option value="United States" >United States</option>
                     <option value="United Kingdom">United Kingdom</option>
                     <option value="Afghanistan">Afghanistan</option>
@@ -258,7 +258,7 @@
                     <option value="Bosnia and Herzegovina">Bosnia and Herzegovina</option>
                     <option value="Botswana">Botswana</option>
                     <option value="Bouvet Island">Bouvet Island</option>
-                    <option value="Brazil">Brasil</option>
+                    <option value="Brazil" selected="selected">Brasil</option>
                     <option value="British Indian Ocean Territory">British Indian Ocean Territory</option>
                     <option value="Brunei Darussalam">Brunei Darussalam</option>
                     <option value="Bulgaria">Bulgaria</option>
@@ -472,11 +472,11 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputEmail1">E-mail</label>
-                  <input type="email" class="form-control" id="exampleInputEmail" placeholder="Digite o e-mail" name="email">
+                  <input type="email" class="form-control" id="exampleInputEmail" placeholder="Digite o e-mail" name="email" value="gus@gmail.com">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Senha</label>
-                  <input type="password" class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password">
+                  <input type="password" class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password" value="1245PWD">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputFile">Foto</label>
@@ -484,7 +484,7 @@
                 </div>
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" name="admin" id="exampleInputAdmin"> Administrador
+                    <input type="checkbox" name="admin" id="exampleInputAdmin" checked> Administrador
                   </label>
                 </div>
               </div>
