Create userController, all index.js comands and functions was pass to userController

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <th>Ações</th>
                   </tr>
                 </thead>
-                <tbody id="table-users">
+                <tbody id="tBody-users">
                   
                 </tbody>
               </table>
@@ -515,6 +515,7 @@
 
 </div>
 <script src="models/User.js"></script>
+<script src="controllers/userController.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
