--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputName">Nome</label>
-                  <input type="text" class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name" value="Gustavo">
+                  <input type="text" class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name" value="">
                 </div>
                 <div class="form-group">
                   <label>Gênero</label>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputBirth">Nascimento</label>
-                  <input type="text" class="form-control" id="exampleInputBirth" name="birth" value="08-03-2001">
+                  <input type="text" class="form-control" id="exampleInputBirth" name="birth">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputCountry">País</label>
@@ -472,11 +472,11 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputEmail1">E-mail</label>
-                  <input type="email" class="form-control" id="exampleInputEmail" placeholder="Digite o e-mail" name="email" value="gus@gmail.com">
+                  <input type="email" class="form-control" id="exampleInputEmail" placeholder="Digite o e-mail" name="email">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Senha</label>
-                  <input type="password" class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password" value="1245PWD">
+                  <input type="password" class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputFile">Foto</label>
@@ -515,6 +515,7 @@
 
 </div>
 <script src="models/User.js"></script>
+<script src="classes/utils.js"></script>
 <script src="controllers/userController.js"></script>
 <script src="index.js"></script>
 </body>
