--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
               <!-- small box -->
               <div class="small-box bg-green">
                 <div class="inner">
-                  <h3>44</h3>
+                  <h3 id="numbers-of-users">0</h3>
           
-                  <p>Novos Usuários</p>
+                  <p>Usuários</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-person-add"></i>
@@ -182,7 +182,7 @@
               <!-- small box -->
               <div class="small-box bg-yellow">
                 <div class="inner">
-                  <h3>15</h3>
+                  <h3 id="numbers-of-admins" >0</h3>
           
                   <p>Administradores</p>
                 </div>
@@ -204,7 +204,7 @@
               <div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputName">Nome</label>
-                  <input type="text" class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name" value="">
+                  <input type="text" required class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name" value="Gusta">
                 </div>
                 <div class="form-group">
                   <label>Gênero</label>
@@ -215,13 +215,13 @@
                   </div>
                   <div class="radio">
                     <label for="exampleInputGenderF">
-                      <input type="radio" id="exampleInputGenderF" name="gender" value="F">
+                      <input type="radio"  id="exampleInputGenderF" name="gender" value="F">
                       Feminino</label>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="exampleInputBirth">Nascimento</label>
-                  <input type="text" class="form-control" id="exampleInputBirth" name="birth">
+                  <input type="text" required class="form-control" id="exampleInputBirth" name="birth" value="08/05/2021">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputCountry">País</label>
@@ -472,11 +472,11 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputEmail1">E-mail</label>
-                  <input type="email" class="form-control" id="exampleInputEmail" placeholder="Digite o e-mail" name="email">
+                  <input type="email" class="form-control" id="exampleInputEmail" placeholder="Digite o e-mail" name="email" value="gusta@123.com">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Senha</label>
-                  <input type="password" class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password">
+                  <input type="password" class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password" value="12345">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputFile">Foto</label>
